testathon bug fixes
Fix for application scrollbar
Fix masthead menus to close on toggle
Fix --pf-v5-global--FontFamily--sans-serif font
Fix operator hub card display issues

--- a/frontend/packages/dev-console/src/components/import/serverless-function/AddServerlessFunctionForm.scss
+++ b/frontend/packages/dev-console/src/components/import/serverless-function/AddServerlessFunctionForm.scss
@@ -9,7 +9,7 @@ $serverless-extension-item-icon-size: 40px;
 
 .odc-serverless-extension-provider {
   font-weight: var(--pf-v5-global--FontWeight--normal);
-  font-family: var(--pf-v5-global--FontFamily--sans-serif);
+  font-family: var(--pf-v5-global--FontFamily--text);
 }
 
 .odc-serverless-extensions-card-title {
